# sqlalchemy

./: .coveragerc  .deepsource.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitreview  .hgignore  .hgtags  .pre-commit-config.yaml  06CHANGES  09notes.txt  AGENTS.md  AUTHORS  CHANGES  CHANGES.rst  CHANGES_PRE_05  CHANGES_PRE_06  FIX_12858_SUMMARY.md  LICENSE  MANIFEST.in  README  README.dialects.rst  README.py3k  README.rst  README.trunk  README.unittests  README.unittests.rst  README_THIS_IS_06  README_THIS_IS_NOW_VERSION_0.5.txt  TODO  VERSION  a.py  attributes_rollback_test.py  clean_2to3.diff  convert.py  ez_setup.py  my-first git file  mypy_plugin.ini  noxfile.py  pyproject.toml  (+13 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  question.md  typing.yaml  use_case.md  use_case.yaml
.github/workflows/: build-docs.yaml  cibuildwheels.yaml  create-wheels.yaml  run-on-pr.yaml  run-test.yaml
doc/: alphaapi.html  alphaimplementation.html  docs.css  docutil.css  scripts.js  style.css  syntaxhighlight.css
examples/: README  _README.txt  _README_MAINTAINERS.txt  _utils.py
examples/adjacency_list/: __init__.py  adjacency_list.py
examples/adjacencytree/: basic_tree.py  byroot_tree.py  tables.py
examples/association/: __init__.py  basic_association.py  dict_of_sets_with_default.py  proxied_association.py
examples/asyncio/: __init__.py  async_orm.py  async_orm_writeonly.py  basic.py  gather_orm_statements.py  greenlet_orm.py
examples/asyncio_/: __init__.py  async_orm.py  async_orm_writeonly.py  basic.py  gather_orm_statements.py  greenlet_orm.py
examples/backref/: backref_tree.py
examples/beaker_caching/: README  __init__.py  ad_hoc.py  advanced.py  caching_query.py  demo.py  environment.py  fixture_data.py  helloworld.py  local_session_caching.py  meta.py  model.py  relation_caching.py
examples/collections/: large_collection.py
examples/custom_attributes/: __init__.py  active_column_defaults.py  custom_management.py  listen_for_events.py  validate_attributes.py
examples/dataclass_with_working_relationship/: dataclass_with_relationship.py
examples/declarative_reflection/: __init__.py  declarative_reflection.py
examples/derived_attributes/: __init__.py  attributes.py
examples/dogpile_caching/: __init__.py  advanced.py  caching_query.py  environment.py  fixture_data.py  helloworld.py  local_session_caching.py  model.py  relation_caching.py  relationship_caching.py
examples/dynamic_dict/: __init__.py  dynamic_dict.py
examples/elementtree/: __init__.py  adjacency_list.py  explicit.py  optimized_al.py  pickle.py  pickle_type.py  test.xml  test2.xml  test3.xml
examples/extending_query/: __init__.py  filter_public.py  temporal_range.py
examples/generic_associations/: __init__.py  discriminator_on_association.py  generic_fk.py  table_per_association.py  table_per_related.py
examples/graphs/: __init__.py  directed_graph.py  graph1.py
examples/inheritance/: __init__.py  concrete.py  joined.py  polymorph.py  single.py
examples/join_conditions/: __init__.py  cast.py  threeway.py
examples/large_collection/: __init__.py  large_collection.py
examples/materialized_paths/: __init__.py  materialized_paths.py
examples/mutable_events/: __init__.py  composite.py  scalars.py
examples/nested_sets/: __init__.py  nested_sets.py
examples/performance/: __init__.py  __main__.py  bulk_inserts.py  bulk_updates.py  inserts.py  large_resultsets.py  short_selects.py  single_inserts.py
examples/pickle/: custom_pickler.py
examples/poly_assoc/: __init__.py  poly_assoc.py  poly_assoc_fk.py  poly_assoc_generic.py
examples/polymorph/: concrete.py  polymorph.py  polymorph2.py  single.py
examples/postgis/: __init__.py  postgis.py
examples/query_caching/: implicit.py  per_relation.py  per_session.py  query_caching.py
examples/sharding/: __init__.py  asyncio.py  asyncio_.py  attribute_shard.py  separate_databases.py  separate_schema_translates.py  separate_tables.py
examples/space_invaders/: __init__.py  space_invaders.py
examples/syntax_extensions/: __init__.py  qualify.py  test_qualify.py
examples/versioned_history/: __init__.py  history_meta.py  test_versioning.py
examples/versioned_rows/: __init__.py  versioned_map.py  versioned_rows.py  versioned_rows_w_versionid.py  versioned_update_old_row.py
examples/versioning/: __init__.py  _lib.py  history_meta.py  test_versioning.py
examples/vertical/: __init__.py  dictlike-polymorphic.py  dictlike.py  vertical.py
fabfile/: __init__.py  _utils.py  examples_.py
lib/sqlalchemy/: __init__.py  ansisql.py  attributes.py  engine.py  event.py  events.py  exc.py  exceptions.py  inspection.py  interfaces.py  log.py  logging.py  mapper.py  objectstore.py  pool.py  processors.py  queue.py  schema.py  sql.py  sql_util.py  topological.py  types.py  util.py
lib/sqlalchemy_nose/: noseplugin.py
sqlalchemy/: __init__.py  events.py  inspection.py  log.py  schema.py
sqlalchemy/cextension/: processors.c  resultproxy.c  utils.c
sqlalchemy/databases/: __init__.py
sqlalchemy/engine/: base.py  create.py  default.py  interfaces.py  mock.py  util.py
test/: activemapper.py  alltests.py  association.py  attributes.py  cascade.py  case_statement.py  clone.py  columns.py  conftest.py  coverage.py  cycles.py  defaults.py  dependency.py  double.py  eagertest1.py  eagertest2.py  engine.py  engines.py  entity.py  historyarray.py  indexes.py  inheritance.py  inheritance2.py  inheritance3.py  lazytest1.py  legacy_objectstore.py  manytomany.py  mapper.py  masscreate.py  masscreate2.py  massload.py  objectstore.py  onetoone.py  parseconnect.py  pickleable.py  polymorph.py  pool.py  profiles.txt  proxy_engine.py  query.py  (+18 more)
tools/: cython_imports.py  format_docs_code.py  generate_proxy_methods.py  generate_sql_functions.py  generate_tuple_map_overloads.py  normalize_file_headers.py  sync_test_files.py  toxnox.py  trace_orm_adapter.py  walk_packages.py  warn_tox.py
(+1199 files in other folders)
