[egg_info]
tag_build = dev

[metadata]
license_file = LICENSE

[nosetests]
with-sqla_testing = true
exclude = ^examples
first-package-wins = true
where = test

[tool:pytest]
addopts= --tb native -v -r sfxX --maxfail=25 -p no:warnings -p no:logging
python_files=test/*test_*.py

[upload]
sign = 1
identity = C4DAFEE1

[flake8]
show-source = true
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
# F841 is "variable assigned but never used".   lots of these are in
# code examples, as well as in tests where sometimes they serve to keep
# an object in scope.   It would be nice to have less of these but at the
# same time some are needed and some make code more readable
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    F841,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
application-import-names = sqlalchemy,test


[sqla_testing]
requirement_cls=test.requirements:DefaultRequirements
profile_file=test/profiles.txt

# name of a "loopback" link set up on the oracle database.
# to create this, suppose your DB is scott/tiger@xe.  You'd create it
# like:
# create public database link test_link connect to scott identified by tiger using 'xe';
oracle_db_link = test_link

# host name of a postgres database that has the postgres_fdw extension.
# to create this run:
# CREATE EXTENSION postgres_fdw;
# GRANT USAGE ON FOREIGN DATA WRAPPER postgres_fdw TO public;
# this can be localhost to create a loopback foreign table
# postgres_test_db_link = localhost


[db]
default=sqlite:///:memory:
sqlite=sqlite:///:memory:
sqlite_file=sqlite:///querytest.db

postgresql=postgresql://scott:tiger@127.0.0.1:5432/test
pg8000=postgresql+pg8000://scott:tiger@127.0.0.1:5432/test
postgresql_psycopg2cffi=postgresql+psycopg2cffi://scott:tiger@127.0.0.1:5432/test

mysql=mysql://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
pymysql=mysql+pymysql://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4

mssql=mssql+pyodbc://scott:tiger@ms_2008
mssql_pymssql=mssql+pymssql://scott:tiger@ms_2008

oracle=oracle://scott:tiger@127.0.0.1:1521
oracle8=oracle://scott:tiger@127.0.0.1:1521/?use_ansi=0

firebird=firebird://sysdba:masterkey@localhost//Users/classic/foo.fdb
